--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,23 @@
 
 /* stile nav */
 
-.linea{
-  border-color: white;
-  height: 100px;
-  width: 100%;
+.stilelinea ul li{
+display: inline-block;
+padding: 0 10px;
+}
+
+.lineabianca{
+  width: 100px;
+  height: 5px;
   background-color: white;
+  border-radius: 5%;
+}
+
+.lineanera{
+  width: 100px;
+  height: 5px;
+  background-color: black;
+  border-radius: 5%;
 }
 
 
@@ -115,7 +127,7 @@ height: auto;
 
 }
 
-.bloccoimg > .fa-star {
+.iconanera {
   color: black;
   font-size: 30px;
 }
@@ -176,7 +188,7 @@ color: black;
 .blocco4{
   background-color: white;
   padding: 80px 0;
-
+text-align: center;
 }
 
 .blocco4 h2{
@@ -185,13 +197,6 @@ color: black;
   font-weight: bold;
   font-size: 40px;
   text-align: center;
-}
-
-.blocco4 .fa-star {
-  color: black;
-  font-size: 30px;
-  text-align: center;
-  display: block;
 }
 
 /* Inizio stile form blocco4 */
